--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1"
   },
   "scripts": {
